--- a/package.json
+++ b/package.json
@@ -11,24 +11,17 @@
     "format:write": "prettier --write \"**/*.{css,js,json,jsx,ts,tsx}\""
   },
   "dependencies": {
-    "@react-three/drei": "^9.105.6",
-    "@react-three/fiber": "8.15.1",
-    "@react-three/postprocessing": "2.15.11",
-    "@studio-freight/react-lenis": "^0.0.47",
+    "@radix-ui/react-icons": "1.3.0",
     "@tanstack/react-query": "^5.62.11",
     "clsx": "^2.1.1",
     "framer-motion": "^10.12.4",
-    "leva": "^0.9.35",
-    "ms": "^2.1.3",
     "next": "^14.2.22",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18",
+    "react-dom": "18.2.0",
     "react-icons": "^5.3.0",
-    "react-intersection-observer": "^9.4.3",
-    "swr": "^2.2.5",
+    "react-hot-toast": "2.4.1",
     "tailwind-merge": "^2.3.0",
-    "three": "0.159.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
